Adding gitter integration with sidecar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,11 @@
 
   <script type="text/javascript" src="/public/js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+  
+  <script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'fluentribbon/Fluent.Ribbon'
+  };
+  </script>
+  <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>  
 </head>
