--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
   <link rel="stylesheet" href="/public/css/obsidian.css">
+  <link rel="stylesheet" href="/public/css/breadcrumb.css">
 
   <!-- Icons -->
   <link rel="shortcut icon" href="/public/favicon.ico">
