Adding css overrides to use space more efficiently

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/public/css/lanyon.css">
   <link rel="stylesheet" href="/public/css/obsidian.css">
   <link rel="stylesheet" href="/public/css/breadcrumb.css">
+  <link rel="stylesheet" href="/public/css/overrides.css">
 
   <!-- Icons -->
   <link rel="shortcut icon" href="/public/favicon.ico">
