--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -80,10 +80,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width: 56rem) {
   .container {
-    max-width: 38rem;
+    max-width: 48rem;
   }
 }
-
+@media (min-width: 68rem) {
+  .container {
+    max-width: 60rem;
+  }
+}
 
 /*
  * Masthead
