--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
     <a class="sidebar-nav-item" href="/#support">Support</a>
     <a class="sidebar-nav-item" href="{{ site.data.github.repo }}/releases">Releases</a>
     <a class="sidebar-nav-item" href="{{ site.data.github.repo }}">GitHub</a>
-    <span class="sidebar-nav-item"><a href="http://nuget.org/packages/Fluent.Ribbon"><img src="https://img.shields.io/nuget/vpre/Fluent.Ribbon.svg?style=flat-square" alt="Nuget"></a></span>
+    <span class="sidebar-nav-item"><a href="https://nuget.org/packages/Fluent.Ribbon"><img src="https://img.shields.io/nuget/vpre/Fluent.Ribbon.svg?style=flat-square" alt="Nuget"></a></span>
   </nav>
 
   <div class="sidebar-item">
