--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
           <div class="social">
-            <iframe src="http://ghbtns.com/github-btn.html?user=fluentribbon&amp;repo=Fluent.Ribbon&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-            <iframe src="http://ghbtns.com/github-btn.html?user=fluentribbon&amp;repo=Fluent.Ribbon&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=fluentribbon&amp;repo=Fluent.Ribbon&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=fluentribbon&amp;repo=Fluent.Ribbon&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
           </div>
 
           <h3 class="masthead-title">
